--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -137,7 +137,7 @@
 	<footer class="page-footer font-small blue">
 		
 		<div class="footer-copyright text-center py-3">© 2020 Copyright:
-			<a>Bhargava Sharabha</a>
+			<a>Helena Benedetto</a>
 		</div>
 	</footer>
 
