--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -136,7 +136,7 @@
 	</div>
 	<footer class="page-footer font-small blue">
 		
-		<div class="footer-copyright text-center py-3">© 2020 Copyright:
+		<div class="footer-copyright text-center py-3">
 			<a>Helena Benedetto</a>
 		</div>
 	</footer>
